--- a/Lession2/Quanlysinhvien.html
+++ b/Lession2/Quanlysinhvien.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quan ly sinh vien</title>
-    <script src="quanlysinhvien.js">
+    <script src="quanlysinhvien2.js">
     </script>
 </head>
 
