--- a/Lession3/article-html-only.html
+++ b/Lession3/article-html-only.html
@@ -6,12 +6,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The New Yorker</title>
+    <style>
+        body {
+            font-size: 22px;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 160px;
+            margin: 0;
+            line-height: 1;
+        }
+
+        h1 .title--large {
+            font-size: 268px;
+        }
+
+        ul {
+            margin: 50px 0 28px 17px;
+        }
+
+        ul li {
+            padding-left: 10px;
+        }
+
+        h3 {
+            font-size: 29px;
+        }
+
+        h2 {
+            font-size: 38px;
+        }
+
+        figure img {
+            width: 54%;
+            margin: 0 0 0 24px;
+        }
+
+        #social {
+            margin: 20px 0 28px 17px;
+        }
+
+        figcaption {
+            padding: 35px 0 0 25px;
+            font-size: 24px;
+        }
+
+        figcaption small {
+            display: inline-block;
+            padding-top: 26px;
+        }
+
+        p {
+            font-size: 24px;
+        }
+
+        blockquote {
+            padding-left: 20px;
+            font-size: 24px;
+            margin-bottom: 13px;
+        }
+
+        ol {
+            padding-left: 66px;
+            list-style-position: inside;
+        }
+        ol li {
+            margin-bottom: 22px;
+        }
+        ol li a {
+            display: inline-block;
+            padding-top: 33px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>
-        THE<br>
-        NEW YORKER
+    <h1 class="title">
+        <span>THE</span><br>
+        <span class="title--large">NEW YORKER</span>
     </h1>
     <ul>
         <li><a href="http://getfireshot.com/pdf_aHR0cHM6Ly93d3cubmV3eW9ya2VyLmNvbS9uZXdz">News</a></li>
@@ -29,7 +102,7 @@
         href="http://getfireshot.com/pdf_aHR0cHM6Ly93d3cubmV3eW9ya2VyLmNvbS9jb250cmlidXRvcnMvcnV0aC1mcmFua2xpbg==">Ruth
         Franklin</a>
 
-    <ul>
+    <ul id="social">
         <li><img src="logo/facebook.svg" alt="facebook logo" /></li>
         <li><img src="logo/twitter.svg" alt="twitter logo" /></li>
         <li><img src="logo/email.svg" alt="email logo" /></li>
@@ -60,16 +133,18 @@
         "They're very simple. And yet each has something."
     </p>
     <blockquote>
-        <br> I don't know exactly what a prayer is.
+        I don't know exactly what a prayer is.
         <br> I do know how to pay attention, how to fall down
         <br> into the grass, how to kneel down in grass,
         <br> how to be idle and blessed, how to stroll through the fields,
         <br> which is what I have been doing all day.
     </blockquote>
-    <br>The cadences are almost Biblical. "Attention is the beginning of devotion," she urges elsewhere.
-    <br>This article appears in the print edition of the November 27, 2017, issue, with the headline "The Art of Paying
+    The cadences are almost Biblical. "Attention is the beginning of devotion," she urges elsewhere.
+    <br><br>This article appears in the print edition of the November 27, 2017, issue, with the headline "The Art of
+    Paying
     Attention."
-    <strong>Most popular</strong>
+    <br>
+    <h3>Most popular</h3>
     <ol>
 
         <li>
