--- a/Lession3/article-html-only.html
+++ b/Lession3/article-html-only.html
@@ -6,79 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The New Yorker</title>
-    <style>
-        body {
-            font-size: 22px;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 160px;
-            margin: 0;
-            line-height: 1;
-        }
-
-        h1 .title--large {
-            font-size: 268px;
-        }
-
-        ul {
-            margin: 50px 0 28px 17px;
-        }
-
-        ul li {
-            padding-left: 10px;
-        }
-
-        h3 {
-            font-size: 29px;
-        }
-
-        h2 {
-            font-size: 38px;
-        }
-
-        figure img {
-            width: 54%;
-            margin: 0 0 0 24px;
-        }
-
-        #social {
-            margin: 20px 0 28px 17px;
-        }
-
-        figcaption {
-            padding: 35px 0 0 25px;
-            font-size: 24px;
-        }
-
-        figcaption small {
-            display: inline-block;
-            padding-top: 26px;
-        }
-
-        p {
-            font-size: 24px;
-        }
-
-        blockquote {
-            padding-left: 20px;
-            font-size: 24px;
-            margin-bottom: 13px;
-        }
-
-        ol {
-            padding-left: 66px;
-            list-style-position: inside;
-        }
-        ol li {
-            margin-bottom: 22px;
-        }
-        ol li a {
-            display: inline-block;
-            padding-top: 33px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
