--- a/Lesson6/homework/reminder/reminder.html
+++ b/Lesson6/homework/reminder/reminder.html
@@ -17,11 +17,11 @@
         <h3 class="title text-center">Reminder Pro</h3>
         <form id="add-reminder">
             <div class="row justify-content-around g-lg-0">
-                <div class="col-10 col-lg-4"><input name="title" class="todo form-control" type="text"
+                <div class="col-6 col-lg-auto"><input name="title" class="todo form-control" type="text"
                         placeholder="I have to..." required></div>
-                <div class="col-5 col-lg-4"><input name="deadline" class="form-control" id="datepicker" type="text"
+                <div class="col-6"><input name="deadline" class="form-control" id="datepicker" type="text"
                         placeholder="Date" required></div>
-                <div class="col-5 col-lg-3"><button type="submit" class="btn btn-primary submit w-100">Add Reminder</button>
+                <div class="col-auto"><button type="submit" class="btn btn-primary submit w-100">Add Reminder</button>
                 </div>
             </div>
         </form>
