--- a/Lesson-1/Bai1.html
+++ b/Lesson-1/Bai1.html
@@ -7,7 +7,7 @@
     <title>Bai 1</title>
 </head>
 <body>
-    <script>
+    <script>asfasdf
         let numberArray = [];
         let inputNumber;
         let arrayLengthNumber = prompt("Nhap so phan tu cua mang");
